--- a/style.css
+++ b/style.css
@@ -22,6 +22,23 @@
 /* Завдання 2 */
 
 
+E:nth-of-type(n){
+    color: turquoise;
+}
+
+p:nth-child(odd){
+    color: turquoise;
+}
+
+
+p:only-child(odd){
+    color: rgb(147, 64, 224);
+}
+
+:nth-child{
+    color: rgb(64, 224, 99);
+}
+
 .monday .lesson{
     color: darkcyan;
 }
@@ -30,7 +47,7 @@
     color: royalblue;
 }
 
-.wednsday .lesson{
+.wednesday .lesson{
     color: lawngreen;
 }
 
